stylesheets/styles.css
:root {
  --color-aside-border: #DBDBDB;
}
/* Header */

header {
  display: flex;
  justify-content: space-between;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  background-color: var(--color-gray-lighter);
  padding: 2rem;
  width: 100%;
  margin-bottom: auto;
}

.header-nav {
  margin-left: auto;
  margin-right: 10rem;
  display: flex;
  flex-wrap: wrap;
}

.header-nav li {
  display: inline-block;
  padding: 0;
}

.user {
  margin-left: 1rem;
}

a.user {
  padding: 0;
}


.logo-container {
  margin-left: 16rem;
}

.logo-text {
  color: var(--color-white);
  background-color: var(--color-primary-darker);
  padding: 0.5rem;
  margin: 0.2rem;
  border-radius: 2px;
}

/* Image */
.img-xs {
  width: 2.5rem;
  height: 2.5rem;  
}

.img-sm-2 {
  width: 3.5rem;
  height: 3.5rem;  
}

/* Badges */
.badge-xs {
  width: 0.5rem;
  height: 0.5rem;
}

.badge-text {
  line-height: 0.5rem;
  font-size: var(--fs-xs);
}

.badge-md {
  width: 1.1rem;
  height: 1.1rem;
}

.cart {
  margin-left: 1rem;
}

/* Form */
form {
  display: flex;
}

form > input {
  width: 30rem;
  flex-grow: 1;
  border: 2px solid var(--color-white);
  border-radius: 3rem;
  font-size: 1rem;
  padding: 0.5rem;
  margin-right: 1rem;
  margin-left: 1rem;
}

/* Button */
.btn {
  padding-left: 4rem;
  padding-right: 4rem;
}

.btn-login {
  width: 20rem;
}

.btn-link.btn-forgot-password {
  border: none;
  text-decoration: none;
  color: var(--color-primary);
  padding-left: 2rem;
}


/* Input */
.input-group {
  margin-top: 2rem;
}

.input-field-20w {
  width: 20rem;
}

/* Card */
.card-container {
  width: max-content;
}

.login,
.sign-up {
  padding: 3rem;
}

.radio-text {
  margin-left: 0.5rem;
}

.fa-chevron-right {
  padding-left: 0.5rem;
}


/* Card */
.card-icon-overlay-container {
  position: relative;
  width: max-content;
  margin: var(--space-sm);
}

.card-wish-icon {
  position: absolute;
  top: 1rem;
  right: 2rem;
}

.card-wish-icon i {
  color: var(--color-red);
}

.card-footer > .btn {
  width: 100%;
}

.card-vertical-body > .card-content-aside {
  text-align: center;
}

.card-subtitle-lg {
  font-size: var(--fs-base);
  font-weight: var(--fw-light);
}

.striked {
  text-decoration: line-through;
}

.card-footer-aside {
  display: flex;
}

.card-img-20w {
  width: 20rem;
}

.card-title {
  font-size: var(--fs-lg);
  font-weight: var(--fw-light);
}

.card-subtitle {
  font-size: 1.2rem;
  font-weight: var(--fw-bold);
  padding: 0.2rem;
}

.card-hz-subtitles {
  display: flex;
}

.card-hz-actions {
  display: flex;
  flex-direction: column; 
}

.card-hz-content-aside {
  padding-left: 1rem;
}

.slider-quantity {
  width: max-content;
  border-radius: var(--br-base);
  text-align: center;
  padding: 0.2rem 0.5rem;
}

/* Grid */
.wrapper {
  display: grid;
  width: 100%;
  grid-gap: 1.5rem;
  grid-template-columns: 13rem 1fr;
  grid-template-areas: 
  "header header"
  "aside main"
  "aside main"
  "aside main"
  "footer footer";
}


.auth-wrapper {
  display: grid;
  width: 100%;
  grid-gap: 1.5rem;
  grid-template-columns: 13rem 1fr;
  grid-template-areas: 
  "header header"
  "main main"
  "main main"
  "main main"
  "footer footer";
}


.cart-wrapper {
  display: grid;
  width: 100%;
  grid-gap: 1.5rem;
  grid-template-columns: 13rem 1fr;
  grid-template-areas: 
  "header header"
  "main main"
  "main main"
  "main main"
  "footer footer";
}

.wishlist-wrapper {
  display: grid;
  width: 100%;
  grid-gap: 1.5rem;
  grid-template-columns: repeat(4, 13rem) 1fr;
  grid-template-areas: 
  "header header header header header"
  "main   main    main   main   main"
  "main   main    main   main   main"
  "main   main    main   main   main"
  "footer footer  footer footer footer";
}

body {
  display: flex;
}

main {
  width: 100%;
  grid-area: main;
}

header {
  grid-area: header;
}

/* aside */

aside {
  grid-area: aside;
  border-right: 2px solid var(--color-aside-border);
  width: max-content;
  padding: 0 2rem;
}

.flex-col-wrap-start {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: center;
}

.check-group {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
}

.check-group-label {
  padding-left: 1rem;
}
.btn-link {
  margin: 1rem;
  padding: 1rem;
}

.filter-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* footer */
footer {
  margin-top: auto;
  width: 100%;
  grid-area: footer;
}

.footer-container i {
  padding: var(--space-sm);
  color: var(--color-gray-darker);
}

.footer-text {
  padding: 0;
  margin: 0;
}

/* Utilities */
.flex-row-wrap-space-between {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

/* Price Container */

.price-container {
  padding: 0.2rem 1rem;
}

.price-container-header {
  border-bottom: 1px solid var(--color-aside-border);
  padding: 0.5rem;
  font-weight: var(--fw-bold);
}

.amount-container {
  padding: 0.5rem 1rem;
}

.total-amount-container {
  border-top: 1px solid var(--color-aside-border);
  border-bottom: 1px solid var(--color-aside-border);
  font-weight: var(--fw-bold);
}

